Various accessibility fixes: heading levels, aria labels, color contrast, landmarks. Closes the following: * ARC-213 - homepage heading level progression * ARC-217 - collection info button label * ARC-220 - container info contrast * ARC-221 - embed iframe titles * ARC-227 - restriction warning <dl> wrap * ARC-231 - landmark regions for sidebar navs

--- a/app/assets/stylesheets/dul-arclight/modules/digital_objects.scss
+++ b/app/assets/stylesheets/dul-arclight/modules/digital_objects.scss
@@ -4,7 +4,7 @@
 
 .online-banner-wrapper {
   min-height: 50px;
-  background-color: tint($brand-success, 90);
+  background-color: tint($brand-success, 93.5);
   padding: 0;
   margin-bottom: 20px;
 }
